feat: logout and refresh access token endpoints also openapi.yml was flourished
