# microservices/auth-service/internal/router.go
@@ -12,10 +12,12 @@ func StartRouter(r Repo) {
 
 	http.HandleFunc("/auth/login", middleware(r.login))
 	http.HandleFunc("/auth/login/confirm", middleware(r.LoginConfirm))
+
 	http.HandleFunc("/auth/register", middleware(r.Register))
 	http.HandleFunc("/auth/register/confirm", middleware(r.RegisterConfirm))
 
-	//http.HandleFunc("/auth/register", middleware(r.))
+	http.HandleFunc("/auth/logout", middleware(r.Logout))
+	http.HandleFunc("/auth/refresh", middleware(r.RefreshAccessToken))
 
 	err := http.ListenAndServe(config.GetEnv("AUTH_SERVICE_PORT"), nil)
 	if err != nil {
